Scrollbar fixes

--- a/static/css/app.css
+++ b/static/css/app.css
@@ -42,18 +42,6 @@ input[type="search"]::-webkit-search-results-decoration {
     display: block !important;
 }
 
-@layer utilities {
-    /* Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-        display: none;
-    }
-
-    .no-scrollbar {
-        -ms-overflow-style: none; /* IE and Edge */
-        scrollbar-width: none; /* Firefox */
-    }
-}
-
 @layer components {
     /* FORMS */
 
